# dropcast

./: .gitconfig  .gitignore  README.md  environment.yml  preprocessing.ipynb  pyproject.toml
data/: person_1_after2_6.tif
