[tool.poetry]
name = "dropcast"
version = "0.1.0"
description = ""
authors = ["Sascha Hofmann <sascha.kelevra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
opencv-python = "^4.5.1"
Pillow = "^8.1.0"
matplotlib = "^3.3.4"
scipy = "^1.6.0"
nbdev = "^1.1.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
